internal-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306

  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080

  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP

      #Note: We have also allowed Egress traffic to TCP and UDP port. 
      #This has been added to ensure that the internal DNS resolution works from the internal pod. 
      #Remember: The kube-dns service is exposed on port 53:

      # >kubectl get svc -n kube-system
      #NAME       TYPE        CLUSTER-IP   EXTERNAL-IP   PORT(S)                  AGE
      #kube-dns   ClusterIP   10.96.0.10   <none>        53/UDP,53/TCP,9153/TCP   93m
